<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="settings_share">Поделиться приложением</string>
    <string name="settings_contact_support">Написать в поддержку</string>
    <string name="settings_user_agreement">Пользовательское соглашение</string>
    <string name="settings_share_app_content">https://practicum.yandex.ru/android-developer/</string>
    <string name="settings_share_app_chooser_title">Поделиться</string>
    <string name="settings_support_email">nig.mother@yandex.ru</string>
    <string name="settings_support_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="settings_support_email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="settings_agreement_url">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="search_nothing_found">Ничего не нашлось</string>
    <string name="search_network_issue">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="time_zero">00:00</string>
</resources>