<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?mainScreenBackground"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingBottom="28dp">


    <com.google.android.material.appbar.MaterialToolbar
        style="@style/Toolbar"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/ToolbarTitleText"
        app:titleTextColor="@color/white" />

    <Button
        android:id="@+id/search_button"
        style="@style/ButtonLarge"
        android:layout_marginTop="@dimen/gap_big"
        android:text="@string/search"
        app:icon="@drawable/search_icon" />

    <Button
        android:id="@+id/media_button"
        style="@style/ButtonLarge"
        android:layout_marginTop="@dimen/gap_normal"
        android:text="@string/media"
        app:icon="@drawable/media_icon" />

    <Button
        android:id="@+id/settings_button"
        style="@style/ButtonLarge"
        android:layout_marginTop="@dimen/gap_normal"
        android:text="@string/settings"
        app:icon="@drawable/settings_icon" />

</LinearLayout>