<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        app:navigationIcon="@drawable/arrow_back"
        app:title="@string/search"
        app:titleMarginStart="8dp"
        app:titleTextAppearance="@style/ToolbarTitleText" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_input_layout"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        app:boxBackgroundColor="?attr/colorSurfaceVariant"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconDrawable="@drawable/clear"
        app:endIconMode="custom"
        app:endIconTint="?attr/colorOnSurfaceVariant"
        app:hintEnabled="false"
        app:startIconDrawable="@drawable/search_icon"
        app:startIconTint="?attr/colorOnSurfaceVariant">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawablePadding="-8dp"
            android:gravity="center_vertical"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingVertical="8dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="?attr/colorOnSurfaceVariant"
            android:textSize="@dimen/text_medium" />


    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/searchStatusBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="102dp"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/statusImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/search_nothing_found" />

        <TextView
            android:id="@+id/statusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/search_network_issue"
            android:textColor="?attr/colorOnSurface"
            android:textSize="@dimen/text_large" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/statusButton"
            style="@style/Widget.PlaylistMaker.Button.Rounded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:text="@string/refresh" />


    </LinearLayout>
    <ProgressBar android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        android:indeterminateTint="?attr/colorPrimary"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchHistoryViewGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/youSearchedTextView"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:gravity="center"

            android:text="@string/you_searched"
            android:textColor="?attr/colorOnSurface"
            android:textSize="@dimen/text_large"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchHistoryRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@id/clearHistoryButton"
            app:layout_constraintTop_toBottomOf="@+id/youSearchedTextView"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginTop="8dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clearHistoryButton"
            style="@style/Widget.PlaylistMaker.Button.Rounded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/clear_history"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchHistoryRecyclerView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/resultsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        tools:listitem="@layout/track_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

</LinearLayout>